# perimedes

./: .gitignore  Cargo.toml  Claude.md  README.md  TODO.md
src/: chat.rs  constants.rs  lockscreen.rs  main.rs  timer.rs  types.rs  window.rs
