[package]
name = "perimedes"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
chrono = "0.4.33"
anyhow = "1.0.79"
x11rb = { version = "0.12.0", features = ["allow-unsafe-code"] }
gethostname = "0.4.3"
